Fixed contact section on narrow screenes

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -50,6 +50,7 @@
     .container {
         flex-direction: column;
         gap: 23px;
+        padding: 58px 0;
     }
 
     .text {
